// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Creator: 2FA should dispatch a failed tfa verification if it fails 1`] = `
Array [
  Array [
    Object {
      "type": "TFA_VERIFICATION_PENDING",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "errorDescription": "tfa verify failed",
      },
      "type": "TFA_VERIFICATION_FAIL",
    },
  ],
]
`;

exports[`Action Creator: 2FA should verify tfa and dispatch a login 1`] = `
Array [
  Array [
    Object {
      "type": "TFA_VERIFICATION_PENDING",
    },
  ],
  Array [
    [Function],
  ],
  Array [
    Object {
      "type": "TFA_VERIFICATION_SUCCESS",
    },
  ],
]
`;
